# Campaign-for-North-Africa-State-Space-Cryptography

./: .gitignore  LICENSE  NOTICE  README.md  decode  encode  install.sh  pyproject.toml
cna_ssc/: README.md  __init__.py  __main__.py  bijection.py  cli.py  constants.py  decoder.py  encoder.py  image_export.py  image_steg.py  mixed_radix.py  state_model.py  vsav_reader.py  vsav_writer.py
cna_ssc/crypto/: decoder.py  encoder.py
cna_ssc/data/: playable_hexes.json
cna_ssc/engine/: bijection.py  mixed_radix.py  piece_registry.py
cna_ssc/formats/: buildfile_parser.py  vsav_codec.py
cna_ssc/tests/: test_core.py
experimental/: README.md
experimental/crypto/: decoder.py  encoder.py
experimental/engine/: bijection.py  hex_grid.py  piece_registry.py  piece_registry_data.json
experimental/formats/: buildfile_parser.py  vsav_codec.py
experimental/tests/: test_v2.py
